--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "perpTradeHistory.ts",
   "scripts": {
     "dev": "ts-node perpTradeHistory.ts",
+    "listen:perp": "ts-node ws-listener/perpWsListener.ts",
+    "ws:to-history": "ts-node ws-listener/perpWsToHistory.ts",
     "start": "npx ts-node perpTradeHistory.ts",
     "build": "tsc -p tsconfig.json --skipLibCheck",
     "compile": "tsc -p tsconfig.json --skipLibCheck --noEmit false --outDir dist"
