Add Supabase configuration to .env.example, introduce Deriverse global worker in worker/deriverseGlobalWorker.ts, and update README with worker details and deployment instructions. Add systemd service file for worker management.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,22 @@
-# Helius (devnet)
+# Supabase (required for global worker)
+SUPABASE_URL=https://YOUR_PROJECT.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=YOUR_SERVICE_ROLE_KEY
+
+# Helius / Solana RPC (devnet)
 HELIUS_RPC_URL=https://devnet.helius-rpc.com/?api-key=YOUR_KEY
-# or
-HELIUS_API_KEY=YOUR_KEY
+# Optional explicit WS endpoint; if omitted, derived from HELIUS_RPC_URL
+# HELIUS_WS_URL=wss://devnet.helius-rpc.com/?api-key=YOUR_KEY
+
+# Optional fallback RPC envs
+# DEVNET_RPC_HTTP=https://api.devnet.solana.com
+# DEVNET_RPC_WS=wss://api.devnet.solana.com
+
+# Worker tuning (all optional)
+DERIVERSE_WORKER_COMMITMENT=confirmed
+DERIVERSE_REGISTRY_POLL_MS=30000
+DERIVERSE_MATERIALIZE_POLL_MS=15000
+DERIVERSE_METRICS_LOG_MS=60000
+DERIVERSE_WS_STALE_MS=180000
+DERIVERSE_MAX_RESOLVES_PER_POLL=2
+DERIVERSE_RESOLVE_COOLDOWN_MS=300000
+DERIVERSE_MATERIALIZE_PAGE_SIZE=1000
